--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "face-coverings",
+  "name": "covid-testing",
   "version": "2.1.2",
-  "description": "Face coverings are being distributed in parks across NYC. Find the closest location.",
+  "description": "COVID Testing Facilities - Find the closest location.",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "build": "webpack",
     "prebuild": "yarn test && yarn roll-css",
-    "roll-css": "./node_modules/nyc-lib/css/roll-css.sh ./src/css/face-coverings.theme.css ./src/css/face-coverings.css",
+    "roll-css": "./node_modules/nyc-lib/css/roll-css.sh ./src/css/covid-testing.theme.css ./src/css/covid-testing.css",
     "predeploy": "yarn build",
     "deploy": "node deploy"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CityOfNewYork/face-coverings.git"
+    "url": "git+https://github.com/CityOfNewYork/covid-testing.git"
   },
   "author": "Tim Keane",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/CityOfNewYork/face-coverings/issues"
+    "url": "https://github.com/CityOfNewYork/covid-testing/issues"
   },
-  "homepage": "https://github.com/CityOfNewYork/face-coverings#readme",
+  "homepage": "https://github.com/CityOfNewYork/covid-testing#readme",
   "dependencies": {
     "nyc-lib": "^1.3.87",
     "ol": "6.1.0",
