--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "webpack",
+    "build-no-test": "yarn roll-css && webpack",
     "prebuild": "yarn test && yarn roll-css",
     "roll-css": "./node_modules/nyc-lib/css/roll-css.sh ./src/css/covid-testing.theme.css ./src/css/covid-testing.css",
     "predeploy": "yarn build",
@@ -22,9 +23,11 @@
   },
   "homepage": "https://github.com/CityOfNewYork/covid-testing#readme",
   "dependencies": {
-    "nyc-lib": "^1.3.94",
-    "ol": "6.1.0",
-    "papaparse": "^4.5.1",
+    "jquery": "^3.3.1",
+    "nyc-build-helper": "^0.0.40",
+    "nyc-lib": "^1.4.43",
+    "ol": "^6.5.0",
+    "papaparse": "^5.3.0",
     "proj4": "^2.4.4"
   },
   "devDependencies": {
@@ -34,13 +37,28 @@
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "coveralls": "^3.0.2",
+    "dotenv": "^8.2.0",
+    "ghooks": "^2.0.4",
     "jest": "^24.8.0",
     "jest-canvas-mock": "^2.2.0",
-    "jest-fetch-mock": "^1.6.5",
-    "jquery": "^3.5.1",
-    "nyc-build-helper": "^0.0.38",
-    "webpack": "4.19.1",
-    "webpack-cli": "2.0.14"
+    "jest-fetch-mock": "^2.1.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  },
+  "resolutions": {
+    "**/**/node-fetch": "^2.6.1",
+    "**/**/serialize-javascript": "^3.1.0",
+    "**/**/ssri": "6.0.2",
+    "**/**/postcss": "^8.2.10",
+    "**/**/elliptic": "^6.5.4",
+    "**/**/browserslist": "^4.16.5",
+    "**/**/glob-parent": "^5.1.2",
+    "**/**/set-value": "^4.0.1",
+    "**/**/ssh2": "^1.4.0",
+    "**/**/ansi-regex": "^5.0.1",
+    "**/**/json-schema": "^0.4.0",
+    "**/**/node-notifier": "^8.0.1",
+    "**/**/cross-fetch": "^3.1.5"
   },
   "jest": {
     "verbose": true,
