--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "jest": "^24.8.0",
     "jest-canvas-mock": "^2.2.0",
     "jest-fetch-mock": "^2.1.2",
+    "postcss-clean": "^1.2.2",
+    "postcss-css-variables": "^0.18.0",
+    "postcss-import": "^14.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
