--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jquery": "^3.3.1",
     "nyc-build-helper": "^0.0.40",
     "nyc-lib": "^1.4.62",
-    "ol": "^6.5.0",
+    "ol": "^6.14.1",
+    "ol-mapbox-style": "^8.1.2",
     "papaparse": "^5.3.0",
     "proj4": "^2.4.4"
   },
